mem_dbg/tests/snapshots/test_entry_points_insta__entry_points_depth_0@x86.snap
---
source: mem_dbg/tests/test_entry_points_insta.rs
assertion_line: 63
expression: output
---
40 B 100.00% ⏺: test_entry_points_insta::Outer
