mem_dbg/tests/snapshots/test_entry_points_insta__entry_points_depth_1@x86.snap
---
source: mem_dbg/tests/test_entry_points_insta.rs
assertion_line: 78
expression: output
---
40 B 100.00% ⏺: test_entry_points_insta::Outer
23 B  57.50% ├╴a: test_entry_points_insta::Inner
17 B  42.50% ╰╴b: alloc::string::String
